# wanderer

./: .gitignore  CMakeLists.txt  package.xml
include/wanderer/: CostMap.h  ICostMapDataSource.h  ITrajectoryMatcher.h  LaserScanDataSource.h  SimpleTrajectoryMatcher.h  Trajectory.h  TrajectoryMatch.h  TrajectorySimulator.h  Wandering.h
include/wanderer/costmap/: CostMap.h
include/wanderer/costmap/datasource/: ICostMapDataSource.h  LaserScanDataSource.h
include/wanderer/costmap/parameters/: RosParametersProvider.h
include/wanderer/trajectory/: Trajectory.h
include/wanderer/trajectory/matcher/: ITrajectoryMatcher.h  SimpleTrajectoryMatcher.h  TrajectoryMatch.h
include/wanderer/trajectory/simulator/: TrajectorySimulator.h
include/wanderer/trajectory/simulator/models/: AckermannModel.h  IMotionModel.h  SkidSteerModel.h
launch/: wanderer.launch
rviz/: debug.rviz  mrm_wandering.rviz
src/: CostMap.cpp  ITrajectoryMatcher.cpp  LaserScanDataSource.cpp  SimpleTrajectoryMatcher.cpp  Trajectory.cpp  TrajectoryMatch.cpp  TrajectorySimulator.cpp  Wandering.cpp  wanderer_node.cpp
test/: utest.cpp
